--- a/pages/index.css
+++ b/pages/index.css
@@ -19,6 +19,7 @@
 @import '../blocks/footer/__phone-number/footer__phone-number.css';
 @import '../blocks/footer/__street/footer__street.css';
 @import '../blocks/footer/__wrap/footer__wrap.css';
+@import '../blocks/footer/__social/footer__social.css';
 /* Container */
 @import '../blocks/container/container.css';
 /* Brand */
@@ -30,6 +31,8 @@
 @import '../blocks/nav/nav.css';
 @import '../blocks/nav/__item/nav__item.css';
 @import '../blocks/nav/__list/nav__list.css';
+@import '../blocks/nav/__wrap/nav__wrap.css';
+@import '../blocks/nav/__link/nav__link.css';
 /* Reviews */
 @import '../blocks/reviews/reviews.css';
 @import '../blocks/reviews/__comment/reviews__comment.css';
@@ -38,6 +41,7 @@
 @import '../blocks/reviews/__name/reviews__name.css';
 @import '../blocks/reviews/__picture/reviews__picture.css';
 @import '../blocks/reviews/__wrap/reviews__wrap.css';
+@import '../blocks/reviews/__text/reviews__text.css';
 /* Rooms */
 @import '../blocks/rooms/rooms.css';
 @import '../blocks/rooms/__img/rooms__img.css';
@@ -46,9 +50,9 @@
 @import '../blocks/rooms/__price/rooms__price.css';
 @import '../blocks/rooms/__room-class/rooms__room-class.css';
 @import '../blocks/rooms/__wrap/rooms__wrap.css';
+@import '../blocks/rooms/__title/rooms__title.css';
 /* Social */
 @import '../blocks/social/social.css';
-@import '../blocks/social';
 @import '../blocks/social/__item/social__item.css';
 @import '../blocks/social/__logo/social__logo.css';
 @import '../blocks/social/__txt/social__txt.css';
