--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,3 +1,24 @@
 .footer{
+  position: relative;
+  height: 160px;
+}
 
+.footer::before {
+  content: "";
+  opacity: .3;
+  background: center/cover no-repeat url('../../images/footer/background.png');
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  position: absolute;
+}
+
+.footer::after {
+  content: "";
+  top: 0;
+  z-index: -2;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: var(--grey);
 }
