--- a/blocks/footer/__wrap/footer__wrap.css
+++ b/blocks/footer/__wrap/footer__wrap.css
@@ -2,4 +2,19 @@
   display: flex;
   justify-content: space-between;
   padding-top: 60px;
+  padding-bottom: 40px;
+}
+
+@media (max-width: 767px) {
+  .footer__wrap {
+    flex-direction: column;
+    height: 25vh;
+    padding-top: 30px;
+  }
+}
+
+@media (max-width: 479px) {
+  .footer__wrap {
+    height: 28vh;
+  }
 }
