--- a/blocks/social/__wrap/social__wrap.css
+++ b/blocks/social/__wrap/social__wrap.css
@@ -4,3 +4,15 @@
   width: 52%;
   justify-content: space-between;
 }
+
+@media (max-width: 767px) {
+  .social__wrap {
+    width: 34%;
+    margin-left: 40px;
+  }
+}
+@media (max-width: 479px) {
+  .social__wrap {
+    width: 45%;
+  }
+}
