--- a/blocks/brand/__title/brand__title.css
+++ b/blocks/brand/__title/brand__title.css
@@ -4,3 +4,10 @@
   font-weight: 300;
   margin-top: 10px;
 }
+
+@media (max-width: 767px) {
+  .brand__title {
+    font-size: 17px;
+    margin-top: 14px;
+  }
+}
