--- a/blocks/container/container.css
+++ b/blocks/container/container.css
@@ -1,3 +1,14 @@
 .container {
   padding: 0 40px;
 }
+
+@media (max-width: 767px) {
+  .container {
+    padding: 0 30px;
+  }
+}
+@media (max-width: 479px) {
+  .container {
+    padding: 0 16px;
+  }
+}
